fix(style): button loading animation jump

--- a/src/components/Loading/animations/BouncingBalls/BouncingBalls.module.scss
+++ b/src/components/Loading/animations/BouncingBalls/BouncingBalls.module.scss
@@ -22,7 +22,7 @@ $offset: 40%;
   }
 
   circle {
-    transform: translateY($offset);
+    transform: translateY(0%);
     animation-name: bounce;
     animation-duration: 600ms;
     animation-timing-function: ease-in-out;
